kubernetes-networks/service_b.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
